// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchFilterTags /> should render correctly with a custom class name 1`] = `
<div>
  <div
    class="search-filters--tags some-custom-class-name"
  >
    <button
      class="button -teal -xsmall -outline"
      data-uitestid="cars-search-page_selected-filters-tag_button_Audi"
      id="Audi"
    >
      <div
        class="button--inner"
      >
        Audi
        <i
          class="icon"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <polygon
              points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
            />
          </svg>
        </i>
      </div>
    </button>
    <button
      class="button -teal -xsmall -outline"
      data-uitestid="cars-search-page_selected-filters-tag_button_Coupe"
      id="Coupe"
    >
      <div
        class="button--inner"
      >
        Coupe
        <i
          class="icon"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <polygon
              points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
            />
          </svg>
        </i>
      </div>
    </button>
    <button
      class="button -teal -xsmall -solid"
      data-uitestid="cars-search-page_selected-filters_button_clear-all"
      id="clearAllButton"
    >
      <div
        class="button--inner"
      >
        Clear All
      </div>
    </button>
  </div>
</div>
`;

exports[`<SearchFilterTags /> should render correctly with children & default props 1`] = `
<div>
  <div
    class="search-filters--tags"
  >
    <button
      class="button -teal -xsmall -outline"
      data-uitestid="cars-search-page_selected-filters-tag_button_Audi"
      id="Audi"
    >
      <div
        class="button--inner"
      >
        Audi
        <i
          class="icon"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <polygon
              points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
            />
          </svg>
        </i>
      </div>
    </button>
    <button
      class="button -teal -xsmall -outline"
      data-uitestid="cars-search-page_selected-filters-tag_button_Coupe"
      id="Coupe"
    >
      <div
        class="button--inner"
      >
        Coupe
        <i
          class="icon"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <polygon
              points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"
            />
          </svg>
        </i>
      </div>
    </button>
    <button
      class="button -teal -xsmall -solid"
      data-uitestid="cars-search-page_selected-filters_button_clear-all"
      id="clearAllButton"
    >
      <div
        class="button--inner"
      >
        Clear All
      </div>
    </button>
  </div>
</div>
`;
